--- a/.github/workflows/hax.yml
+++ b/.github/workflows/hax.yml
@@ -5,11 +5,15 @@ on:
   schedule:
     - cron: '0 13 */1 * *'
 jobs:
-  hax_renew:
+  hax_build:
     runs-on: windows-2022
     
     steps:
       - name: 'Renewing Hax VPS ....' 
         run: |
           cmd /c curl -sSL -O https://github.com/CoiaPrant/Hax_extend/raw/main/HaxAutoReNew.exe
-          cmd /c HaxAutoReNew.exe -user "USERNAME" -password "PASSWORD"
+          cmd /c HaxAutoReNew.exe -user %USERNAME% -password %PASSWORD%
+        env:
+          USERNAME: ${{ secrets.USERNAME }}
+          PASSWORD: ${{ secrets.PASSWORD }}
+          
